# imessage-emotion

./: .env.example  .eslintrc.cjs  .gitignore  README.md  drizzle.config.ts  electron-builder.json5  forge.config.ts  index.html  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.smoke-dashboard/: data.mjs
agent/: agent.ts  instructions.md
app/: globals.css  layout.tsx  page.tsx
dist-electron/: main.js  preload.mjs
electron/: electron-env.d.ts  main.ts  preload.ts
experiments/emotion-methods/: .gitignore  HANDOFF.md  README.md  harness.ax.conversation.json  harness.ax.json  harness.ax.large.json  harness.ax.native-smoke.json  harness.ax.sweep.json  harness.ax.top5.json  harness.provider.json  harness.py  harness.quick.json  harness_ax.ts  package-lock.json  package.json  plot_ax_results.py  plot_conversation_heatmap.py  pyproject.toml  run.mjs  run_ax_methods.mjs  run_llm_methods.py  run_python_methods.py  tsconfig.json  types.d.ts  zoom_spikes.ts
experiments/emotion-methods/results/: README.md  top5-summary.json
experiments/emotion-methods/results/graphs/top5/: summary.json
python/: pyproject.toml
scripts/: run-top-conversations-ax.ts  seed-mock-data.mjs  seed.ts  smoke-api-contract.mjs  smoke-ax-native-db.mjs  smoke-backend-read-api-real.mjs  smoke-backend-read-api-real.ts  smoke-backend-read-api.mjs  smoke-backend-read-api.ts  smoke-chat-real.mjs  smoke-chat-retrieval.mjs  smoke-dashboard-real.mjs  smoke-dashboard.mjs  smoke-local-app-db.mjs  smoke-onboarding-status.mjs  (+6 more)
src/: App.css  (+5 more)
(+191 files in other folders)
