[project]
name = "imessage-emotion-methods-python"
version = "0.0.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "afinn>=0.1",
  "dspy>=3.2.0",
  "keybert>=0.9.0",
  "matplotlib>=3.11.0",
  "nrclex>=4.0",
  "openai>=2.0.0",
  "pysentimiento>=0.7.3",
  "river>=0.22.0",
  "ruptures>=1.1.9",
  "scikit-learn>=1.5.0",
  "sentencepiece>=0.2.1",
  "textblob>=0.19.0",
  "torch>=2.3.0",
  "transformers>=4.44.0",
  "vaderSentiment>=3.3.2",
]
